--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,27 @@
 
  <header class="row">
    <div class="col-3">
-        LOGO
+     <div class="circle">
+        <br />
+        No one
+        <br />
+        said
+        <br />
+        it was easy
+      </div>
+ 
    </div>
-   <div class="col-4">
+   <div class="col-4 slogan">
       splurting out unsolicited advice about entrepreneurship since 2016
    </div>  
-   <div class="col-5">
+   <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
    </div> 
 
     </header>
+
+    <hr />
 
     <br class="clear" />
 
