improved code format

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -19,8 +19,8 @@
  
 
 
- .clear {
-  clear: both;
+.clear {
+    clear: both;
 }
 
 
@@ -45,44 +45,52 @@
 }
 
 
-
 .slogan {
-  font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
-  font-style: italic;
-  padding-top: 26px;
+    font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
+    font-style: italic;
+    padding-top: 26px;
 }
 
+
 .links {
-  padding-top: 26px;
+    padding-top: 26px;
 }
 
 
 .links a {
-  color: black;
-  font-size: 25px;
-  border-bottom: 1px solid #dfdfdf;
-  font-family: 'nexa_rust_extrasfree';
-  font-weight: bold;
+    color: black;
+    font-size: 25px;
+    border-bottom: 1px solid #dfdfdf;
+    font-family: 'nexa_rust_extrasfree';
+    font-weight: bold;
 }
+
 
 header {
-  border-top: 9px solid #222222;
+    border-top: 9px solid #222222;
 }
+
 
 hr {
-  clear:both;
+    clear:both;
 }
 
+
 h1 {
-  font-family: 'nexa_rust_extrasfree';
-  font-weight: bold;
-  font-size: 48px;
-  letter-spacing: -1.5px;
+    font-family: 'nexa_rust_extrasfree';
+    font-weight: bold;
+    font-size: 48px;
+    letter-spacing: -1.5px;
 }
 
 
 h2 {
-  font-family: 'nexa_rust_extrasfree';
-  font-weight: 600;
-  letter-spacing: -1.5px;
+    font-family: 'nexa_rust_extrasfree';
+    font-weight: 600;
+    letter-spacing: -1.5px;
+}
+
+
+.next-quote {
+    color:#f84342;
 }
