--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,32 +11,47 @@
 
   <body>
 
- <header class="row">
-   <div class="col-3">
-     <div class="circle">
-        <br />
-        No one
-        <br />
-        said
-        <br />
-        it was easy
+    <header class="row">
+      <div class="col-3">
+        <div class="circle">
+          <br />
+          No one
+          <br />
+          said
+          <br />
+          it was easy
+        </div>
       </div>
- 
-   </div>
-   <div class="col-4 slogan">
-      splurting out unsolicited advice about entrepreneurship since 2016
-   </div>  
-   <div class="col-5 links">
+
+      <div class="col-4 slogan">
+        splurting out unsolicited advice about entrepreneurship since 2016
+      </div>  
+
+      <div class="col-5 links">
         <%= link_to 'Contribute', '#' %>
         <%= link_to 'About', '#' %>
-   </div> 
-
+      </div> 
     </header>
-
     <hr />
-
     <br class="clear" />
 
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+          </div>
+          <div class="col-6 footer-blurb">
+            Proudly hacked by <a href="[YOUR_PORTFOLIO_URL]">Samia Maeruf</a><br />
+            Want to build your own Splurty Web App - <a href="https://online.bootcampspot.com">Learn how to code here</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
