--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,16 @@
 
     <header class="row">
       <div class="col-3">
-        <div class="circle">
-          <br />
-          No one
-          <br />
-          said
-          <br />
-          it was easy
-        </div>
+        <%= link_to root_path, class: 'logo' do %>
+          <div class="circle">
+            <br />
+            No one
+            <br />
+            said
+            <br />
+            it was easy
+          </div>
+        <% end %>
       </div>
 
       <div class="col-4 slogan">
@@ -28,7 +30,7 @@
       </div>  
 
       <div class="col-5 links">
-        <%= link_to 'Contribute', '#' %>
+        <%= link_to 'Contribute', new_quote_path %>
         <%= link_to 'About', '#' %>
       </div> 
     </header>
@@ -43,7 +45,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-            <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+            <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
           </div>
           <div class="col-6 footer-blurb">
             Proudly hacked by <a href="[YOUR_PORTFOLIO_URL]">Samia Maeruf</a><br />
